# openeis-generate

./: CHANGELOG.md  Cargo.toml  README.en.md  README.md
.claude/skills/openeis-generate/: SKILL.md  reference.md
example-templates/: README.md  verify-package.sh
example-templates/feature-toggles/: Cargo.toml  template.kdl
example-templates/feature-toggles/src/: lib.rs.liquid
example-templates/feature-toggles/src/modules/: auth.rs  graphql.rs  logging.rs
example-templates/hooks-demo/: README.md.liquid  post.rhai  pre.rhai  template.kdl
example-templates/minimal/: .genignore  README.md.liquid  secrets.env  template.kdl  {{ name | kebab_case }}.txt
example-templates/package-demo/: .genignore  README.md.liquid  secrets.env  template.kdl
example-templates/package-demo/config/: app.toml.liquid
example-templates/package-demo/src/: main.rs.liquid
example-templates/rust-cli/: Cargo.toml.liquid  README.md  template.kdl
example-templates/rust-cli/src/: main.rs.liquid
src/: app_config.rs  archive.rs  cli.rs  conditional.rs  config.rs  generate.rs  git.rs  hooks.rs  lib.rs  main.rs  package.rs  template_filters.rs  variables.rs  vcs.rs
