[package]
name = "openeis-generate"
version = "0.1.0"
edition = "2024"

[dependencies]
# v1-fallback 是必须的：kdl 6.7.1 的 v2 解析器对裸 `true`/`false`/`null` 作参数值会解析失败，
# 启用后 v2 失败自动回退 v1（实测即修好）。serde / span 默认已开启。
kdl = { version = "6.7.1", features = ["span", "v1-fallback"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
dialoguer = "0.11"
flate2 = "1"
globset = "0.1"
heck = "0.5"
home = "0.5"
liquid = "0.26"
regex = "1"
rhai = "1"
sanitize-filename = "0.6"
tar = "0.4"
tempfile = "3"
thiserror = "2"
ureq = "2"
walkdir = "2"
zip = "2"
