[package]
name = "openeis-generate"
version = "0.1.0"
edition = "2024"
description = "A project/template generator whose configuration is written in KDL instead of TOML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openeis-project/openeis-generate"
homepage = "https://github.com/openeis-project/openeis-generate"
documentation = "https://docs.rs/openeis-generate"
keywords = ["kdl", "template", "scaffold", "generator", "cargo-generate"]
categories = ["command-line-utilities", "development-tools", "template-engine"]
# Demo/dev-only artifacts: not compiled into the binary and not needed by
# crate consumers. Excluding them also dodges Cargo's refusal to package
# filenames containing `|` (e.g. `{{ name | kebab_case }}.txt` in the
# minimal example template).
exclude = [
    "example-templates/",
    ".claude/",
    "/target",
]

[dependencies]
# kdl 6.7.1 的 v2 解析器把裸 `true`/`false`/`null` 当作标识符而非布尔值，
# 所以 KDL 里写布尔值必须用 `#true`/`#false`/`#null`（v2 语法）。无需 v1-fallback。
kdl = { version = "6.7.1", features = ["span"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
dialoguer = "0.11"
flate2 = "1"
globset = "0.1"
heck = "0.5"
home = "0.5"
liquid = "0.26"
# liquid-core/liquid-derive/pastey power the case-conversion Liquid filters
# (see `template_filters`); same versions cargo-generate uses for this engine.
liquid-core = "0.26"
liquid-derive = "0.26"
pastey = "0.2"
regex = "1"
rhai = "1"
sanitize-filename = "0.6"
tar = "0.4"
tempfile = "3"
thiserror = "2"
ureq = "2"
walkdir = "2"
zip = "2"
# zstd for `.tar.zst` encode (package) and decode (--archive). zstd-sys is
# already compiled transitively via `zip`, so this adds no new native build.
zstd = "0.13"
